# great-theme

./: .gitignore  MANIFEST.in  Makefile  README.md  citation.html  code-of-conduct.html  contributing.html  great-docs.css  index.html  license.html  pyproject.toml  search.json
.github/workflows/: docs.yml  test.yml
docs/: .gitignore  _quarto.yml  _source_links.json  citation.qmd  code-of-conduct.qmd  contributing.qmd  great-docs.css  index.qmd  license.qmd  llms.txt
docs/scripts/: post-render.py
examples/: README.md
great_docs/: __init__.py  _directives.py  cli.py  core.py
great_docs/assets/: .gitignore  github-workflow-template.yml  post-render.py  styles.css
great_docs/renderer/: __init__.py  _format.py  _renderer.py  _tools.py  typing.py  typing_information.py
great_docs/renderer/_pandoc/: blocks.py
great_docs/renderer/_render/: __init__.py  base.py  doc.py  docattribute.py  docclass.py  extending.py  layout.py  link.py  mixin_call.py  mixin_members.py  page.py  section.py
great_docs/renderer/stylesheets/: install.py
great_theme/: __init__.py  core.py
tests/: test_directives.py  test_great_docs.py  test_great_theme.py
tests/renderer/: test_classes.py  test_functions.py
